--- a/web/SASS/_footer.scss
+++ b/web/SASS/_footer.scss
@@ -1,9 +1,8 @@
 footer{
-    position: fixed buttom;
+    position: fixed ;
     background-color: black;
     color: gray;
     border-top: 1px solid black;
-    margin-top: 2.2em;
-    padding: 0.5em;
+    width: 100%;
+    
 }
-
