--- a/app/Resources/views/membres/carnetDeBord.html.twig
+++ b/app/Resources/views/membres/carnetDeBord.html.twig
@@ -5,11 +5,6 @@
             <img class="bells" src="{{ asset('image/bell2.png') }}"/>
         </div>
         <h2 class="text-center">Carnet de bord</h2>
-        <div class="carnet col-lg-offset-11 col-lg-2">
-            <p>My projects</p>
-            <p class="a">My messages</p>
-            <p class="a">My settings</p>
-        </div>
         <section class="hide">
             <div>
                 {% for post in posts %}
@@ -49,10 +44,10 @@
                     <p>nom</p>
                     <p>prenom</p>
                     <p>pseudo</p>
-                    <a>changer le mot de passe</a>
+                    <a href="">changer le mot de passe</a>
                     <p>adresse</p>
                     <p>ville</p>
-                    <a>url site web</a>
+                    <a href="">site web</a>
                     <button>edit</button>
                     <button>Update</button>
                 </div>
@@ -60,55 +55,53 @@
             </div>
             <div class="col-lg-12 ">
                 <h4>Projects:</h4>
-                            <div class="col-lg-12 projet">
-                <div>
-                    <p class="col-lg-6" >bla bla bla bla bla</p>
-                    <a class="col-lg-offset-1 col-lg-1">edit</a> 
-                    <a class="col-lg-offset-1 col-lg-1">quit</a>
-                    <p class="col-lg-offset-1 col-lg-1">boss</p>
+                <div class="col-lg-12 projet">
+                    <div>
+                        <p class="col-lg-6" >bla bla bla bla bla</p>
+                        <a class="col-lg-offset-1 col-lg-1">edit</a> 
+                        <a class="col-lg-offset-1 col-lg-1">quit</a>
+                        <p class="col-lg-offset-1 col-lg-1">boss</p>
+                    </div>
+                    <div>
+                        <p class="col-lg-6" >bla bla bla bla bla</p>
+                        <a class="col-lg-offset-1 col-lg-1">edit</a> 
+                        <a class="col-lg-offset-1 col-lg-1">quit</a>
+                        <p class="col-lg-offset-1 col-lg-1">boss</p>
+                    </div>
+                    <div>
+                        <p class="col-lg-6" >bla bla bla bla bla</p>
+                        <a class="col-lg-offset-1 col-lg-1">edit</a> 
+                        <a class="col-lg-offset-1 col-lg-1">quit</a>
+                        <p class="col-lg-offset-1 col-lg-1">boss</p>
+                    </div>
+                    <div>
+                        <p class="col-lg-6" >bla bla bla bla bla</p>
+                        <a class="col-lg-offset-1 col-lg-1">edit</a> 
+                        <a class="col-lg-offset-1 col-lg-1">quit</a>
+                        <p class="col-lg-offset-1 col-lg-1">boss</p>
+                    </div>
+                    <div>
+                        <p class="col-lg-6" >bla bla bla bla bla</p>
+                        <a class="col-lg-offset-1 col-lg-1">edit</a> 
+                        <a class="col-lg-offset-1 col-lg-1">quit</a>
+                        <p class="col-lg-offset-1 col-lg-1">boss</p>
+                    </div>
+                    <div>
+                        <p class="col-lg-6" >bla bla bla bla bla</p>
+                        <a class="col-lg-offset-1 col-lg-1">edit</a> 
+                        <a class="col-lg-offset-1 col-lg-1">quit</a>
+                        <p class="col-lg-offset-1 col-lg-1">boss</p>
+                    </div>
+                    <div>
+                        <p class="col-lg-6" >bla bla bla bla bla</p>
+                        <a class="col-lg-offset-1 col-lg-1">edit</a> 
+                        <a class="col-lg-offset-1 col-lg-1">quit</a>
+                        <p class="col-lg-offset-1 col-lg-1">boss</p>
+                    </div>
                 </div>
-                <div>
-                    <p class="col-lg-6" >bla bla bla bla bla</p>
-                    <a class="col-lg-offset-1 col-lg-1">edit</a> 
-                    <a class="col-lg-offset-1 col-lg-1">quit</a>
-                    <p class="col-lg-offset-1 col-lg-1">boss</p>
-                </div>
-                <div>
-                    <p class="col-lg-6" >bla bla bla bla bla</p>
-                    <a class="col-lg-offset-1 col-lg-1">edit</a> 
-                    <a class="col-lg-offset-1 col-lg-1">quit</a>
-                    <p class="col-lg-offset-1 col-lg-1">boss</p>
-                </div>
-                <div>
-                    <p class="col-lg-6" >bla bla bla bla bla</p>
-                    <a class="col-lg-offset-1 col-lg-1">edit</a> 
-                    <a class="col-lg-offset-1 col-lg-1">quit</a>
-                    <p class="col-lg-offset-1 col-lg-1">boss</p>
-                </div>
-                <div>
-                    <p class="col-lg-6" >bla bla bla bla bla</p>
-                    <a class="col-lg-offset-1 col-lg-1">edit</a> 
-                    <a class="col-lg-offset-1 col-lg-1">quit</a>
-                    <p class="col-lg-offset-1 col-lg-1">boss</p>
-                </div>
-                <div>
-                    <p class="col-lg-6" >bla bla bla bla bla</p>
-                    <a class="col-lg-offset-1 col-lg-1">edit</a> 
-                    <a class="col-lg-offset-1 col-lg-1">quit</a>
-                    <p class="col-lg-offset-1 col-lg-1">boss</p>
-                </div>
-                <div>
-                    <p class="col-lg-6" >bla bla bla bla bla</p>
-                    <a class="col-lg-offset-1 col-lg-1">edit</a> 
-                    <a class="col-lg-offset-1 col-lg-1">quit</a>
-                    <p class="col-lg-offset-1 col-lg-1">boss</p>
-                </div>
-  
-   
-                </div>
-                <button>new</button>
+                <button class="col-lg-offset-11">new</button>
             </div>
-            
+
         </section>
     </div>
 {% endblock %}
