--- a/web/SASS/_activités.scss
+++ b/web/SASS/_activités.scss
@@ -1,10 +1,11 @@
 .evenements div div div {
-    padding: 0.5em;
-    margin: 0.8em;
+    padding: 0.8em;
+    padding-bottom: 2em;
     margin-left: -0.5em;
     margin-right: -0.5em;
     background-color: $thirdColor;
 }
+
 .evenements div div {
     margin-top: 1em;
     margin-right: -15px;
@@ -35,11 +36,14 @@ h3 {
 :hover span {
     padding-right: 13px;
 }
-.evenements div div a:hover {
-    /*box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);*/
-}
 .evenements div div a:nth-child(n+2) {
     text-decoration: none;
     width: 30%;
     text-align: center;
+}
+.evenements{
+    position: fixed ;
+    z-index: 3;
+    height: 0px;
+
 }
