--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,3 +1,7 @@
+input {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em; }
+
 .section {
   border: 1px solid black;
   background-color: lightblue;
@@ -7,36 +11,43 @@
 
 body {
   font-family: cursive;
-  background-color: #bdcabd; }
+  background-color: #2ecc71; }
 
-.login {
-  width: 33%; }
+.trio {
+  position: absolute;
+  margin-left: -185px;
+  margin-top: -45px;
+  z-index: -1; }
 
-.login p {
-  border: 1px solid black;
+.trio li {
   background-color: white;
-  padding: 0.5em;
-  margin: 1em; }
+  list-style-type: none;
+  border: solid #000 1px;
+  margin: 4px;
+  padding: 2px;
+  padding-right: 25px;
+  margin-left: 20px; }
 
-.login a {
-  float: right;
-  text-decoration: none;
-  padding-bottom: -15px; }
+#profil {
+  margin-left: 0; }
+
+.nous a {
+  color: black;
+  font-size: 17px; }
 
 header {
   margin: 1.5em; }
 
 footer {
-  position: fixed buttom;
+  position: fixed;
   background-color: black;
   color: gray;
   border-top: 1px solid black;
-  margin-top: 2.2em;
-  padding: 0.5em; }
+  width: 100%; }
 
 .evenements div div div {
-  padding: 0.5em;
-  margin: 0.8em;
+  padding: 0.8em;
+  padding-bottom: 2em;
   margin-left: -0.5em;
   margin-right: -0.5em;
   background-color: #FEFF68; }
@@ -71,13 +82,15 @@ h3 {
 :hover span {
   padding-right: 13px; }
 
-.evenements div div a:hover {
-  /*box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);*/ }
-
 .evenements div div a:nth-child(n+2) {
   text-decoration: none;
   width: 30%;
   text-align: center; }
+
+.evenements {
+  position: fixed;
+  z-index: 3;
+  height: 0px; }
 
 .bell {
   border: 1px solid darkslategray;
