--- a/web/SASS/_footer.scss
+++ b/web/SASS/_footer.scss
@@ -1,8 +1,11 @@
 footer{
-    position: fixed ;
+    position:fixed;
+    bottom:0px;
     background-color: black;
     color: gray;
-    border-top: 1px solid black;
-    width: 100%;
-    
+    width: 100%;    
+    z-index: 10000;
+}
+footer p {
+    margin-top: 6px;
 }
