--- a/web/SASS/_activités.scss
+++ b/web/SASS/_activités.scss
@@ -9,8 +9,9 @@
 .evenements div div {
     margin-top: 1em;
     margin-right: -15px;
-    border : 1.5px solid black; 
+    /*border : 1.5px solid black;*/ 
     background-color: lightblue;
+    box-shadow: 1px 2px 10px;
 }
 h2 {
     font-size: 2vw;
@@ -22,12 +23,13 @@ h3 {
 }
 .evenements div div a:first-child {
     text-decoration: none;
+    color: white;
     background-color: darkslategrey;
     position:absolute;
     padding: 0.3em;
     margin-top: -12px;
-    margin-left: 220px;
-    width:15%;
+    margin-left: 210px;
+    width:17%;
     text-align: center;
     cursor: pointer;
     transition: all 0.6s;
@@ -40,10 +42,31 @@ h3 {
     text-decoration: none;
     width: 30%;
     text-align: center;
+    
 }
 .evenements{
     position: fixed ;
     z-index: 3;
     height: 0px;
 
+}
+
+.trio{
+    position: absolute;
+    margin-left: -196px ;
+    margin-top: -45px;
+    z-index: -1;
+}
+
+.trio li{
+    background-color: darkslategrey;
+    color: white;
+    list-style-type: none;
+    /*border: solid #000 1px;*/ 
+    margin: 4px;
+    padding: 2px;
+    padding-right: 40px;
+    margin-left: 20px;
+    padding-left: 8px;
+    cursor: pointer;
 }
