--- a/web/css/main.css
+++ b/web/css/main.css
@@ -3,47 +3,44 @@ input {
   margin-bottom: 0.5em; }
 
 .section {
-  border: 1px solid black;
+  border: 0px solid black;
   background-color: lightblue;
   padding: 0.8em;
   padding: 3em;
-  margin-top: 1em; }
+  margin-top: 1em;
+  box-shadow: 1px 2px 10px; }
 
 body {
-  font-family: cursive;
   background-color: #2ecc71; }
-
-.trio {
-  position: absolute;
-  margin-left: -185px;
-  margin-top: -45px;
-  z-index: -1; }
-
-.trio li {
-  background-color: white;
-  list-style-type: none;
-  border: solid #000 1px;
-  margin: 4px;
-  padding: 2px;
-  padding-right: 25px;
-  margin-left: 20px; }
-
-#profil {
-  margin-left: 0; }
 
 .nous a {
   color: black;
+  text-shadow: 0px 0px 20px white;
   font-size: 17px; }
+
+/*.contacter{
+    position: absolute;
+    margin-top: 100px;
+    padding-left: -55px;
+}*/
+header a {
+  color: black;
+  font-size: 20px;
+  margin: 125px; }
 
 header {
   margin: 1.5em; }
 
 footer {
   position: fixed;
+  bottom: 0px;
   background-color: black;
   color: gray;
-  border-top: 1px solid black;
-  width: 100%; }
+  width: 100%;
+  z-index: 10000; }
+
+footer p {
+  margin-top: 6px; }
 
 .evenements div div div {
   padding: 0.8em;
@@ -55,8 +52,9 @@ footer {
 .evenements div div {
   margin-top: 1em;
   margin-right: -15px;
-  border: 1.5px solid black;
-  background-color: lightblue; }
+  /*border : 1.5px solid black;*/
+  background-color: lightblue;
+  box-shadow: 1px 2px 10px; }
 
 h2 {
   font-size: 2vw;
@@ -68,12 +66,13 @@ h3 {
 
 .evenements div div a:first-child {
   text-decoration: none;
+  color: white;
   background-color: darkslategrey;
   position: absolute;
   padding: 0.3em;
   margin-top: -12px;
-  margin-left: 220px;
-  width: 15%;
+  margin-left: 210px;
+  width: 17%;
   text-align: center;
   cursor: pointer;
   transition: all 0.6s;
@@ -91,6 +90,24 @@ h3 {
   position: fixed;
   z-index: 3;
   height: 0px; }
+
+.trio {
+  position: absolute;
+  margin-left: -196px;
+  margin-top: -45px;
+  z-index: -1; }
+
+.trio li {
+  background-color: darkslategrey;
+  color: white;
+  list-style-type: none;
+  /*border: solid #000 1px;*/
+  margin: 4px;
+  padding: 2px;
+  padding-right: 40px;
+  margin-left: 20px;
+  padding-left: 8px;
+  cursor: pointer; }
 
 .bell {
   border: 1px solid darkslategray;
@@ -112,9 +129,6 @@ h3 {
   position: absolute;
   buttom: -1em; }
 
-.carnet p {
-  background-color: red; }
-
 .profil p {
   border: 1px solid black;
   background-color: white;
@@ -129,5 +143,12 @@ h3 {
   height: 10em;
   /*    width: 10em;*/
   overflow-y: scroll; }
+
+.pro {
+  border-top: 1px solid black;
+  border-bottom: 1px solid black; }
+
+.pro div button {
+  margin-bottom: 100px; }
 
 /*# sourceMappingURL=main.css.map */
