--- a/app/Resources/views/site/contact.html.twig
+++ b/app/Resources/views/site/contact.html.twig
@@ -4,21 +4,24 @@
     <section {#class="container-fluid"#}>
         <div {#class="row"#}>
             <h3 class="text-center">Contact</h3>
-            <div class="col-lg-offset-4">
-                <section>
-                    <p>email</p>
-                </section>
-                <section>
-                    <p>s'inscrire</p>
-                    <p>informations</p>
-                    <p>contact</p>
-                </section>
-                <section>
-                    <p>message</p>
-                </section>
-                <section>
-                    <p>Envoyer</p>
-                </section>
+            <div class="">
+                <h3 class="text-center">Contact</h3>
+                {{form_start(formMail,{'attr':{'action':path('envoieMail')}})}}
+                <input type="text" placeholder="Mail" class="col-lg-8">
+                {{form_widget(formMail.author, {'attr':{'class':'hide'}})}}
+                {{form_widget(formMail.receiver, {'attr':{'class':'hide'}})}}
+                {{form_widget(formMail.subject, {'attr':{'class':'hide'}})}}
+                <select>
+                    {% for sujet in sujets%}
+                        <option>{{sujet.name}}</option>
+                    {% endfor %}
+                </select>
+                {{form_widget(formMail.post, {'attr':{'placeholder':'message'}})}}
+                {{form_widget(formMail.seen, {'attr':{'class':'hide'}})}}
+                {{form_widget(formMail.datetime, {'attr':{'class':'hide'}})}}
+
+                <input type="submit" value="Envoyer" class="col-lg-8 col-lg-offset-2">
+                {{form_end(formMail)}}
                 <section>
                     <a class="col-lg-offset-5" href="{{path('home')}}"><button type="button" class="btn btn-default">Annuler</button></a>
                 </section>
