--- a/app/Resources/views/membres/carnetDeBord.html.twig
+++ b/app/Resources/views/membres/carnetDeBord.html.twig
@@ -1,39 +1,43 @@
 {% extends ':site:home.html.twig' %}
 {% block body %}
-    <div class="col-lg-8 section carnet">
+    <div class="col-lg-7 section carnet">
         <div class="bell">
             <img class="bells" src="{{ asset('image/bell2.png') }}"/>
         </div>
-        <h2 class="text-center">Carnet de bord</h2>
+        <div class="h2">
+            <h2 class="text-center">Carnet de bord</h2>
+        </div>
         <section id="projet">
-                {% for post in posts %}
+            {% for post in posts %}
+                <div class="last">
                     <h3>{{post.title}}</h3>
                     <h4 class="text-center">Last activités</h4>
                     <p class="text-justify">{{post.description}}</p>
-                    <a href="{{path('detailsProjet')}}" class="col-lg-offset-9 col-lg-3">Go to details</a>
-                {% endfor %}
+                    <button href="{{path('detailsProjet')}}" class="col-lg-offset-9 col-lg-3"/>Details
+                </div>
+            {% endfor %}
         </section>
         <section id="message">
-            <div>
+            <div class="messages">
                 <h3>from: UserFriendly</h3>
                 <h4>object: Tu as fini quand ?</h4>
                 <p>R (R = non lu)</p>
                 <p>Contenu du message</p>
-                <a>Answer</a>
+                <button class="col-lg-offset-10">Repondre</button>
             </div>
-            <div>
+            <div class="messages">
                 <h3>from: AnotherUser</h3>
                 <h4>object: Rejoindre la résistance</h4>
                 <p>R (R = non lu)</p>
                 <p>Contenu du message</p>
-                <a>Answer</a>
+                <button class="col-lg-offset-10">Repondre</button>
             </div>
-            <div>
+            <div class="messages">
                 <h3>from: UserFriendly</h3>
                 <h4>object: Tu as fini quand ?</h4>
-                <p>NON R (non R = lu)</p>
+                <p>R (R = non lu)</p>
                 <p>Contenu du message</p>
-                <a>Answer</a>
+                <button class="col-lg-offset-10">Repondre</button>
             </div>
         </section>
         <section id="profil">
@@ -50,9 +54,9 @@
                     <button>edit</button>
                     <button>Update</button>
                 </div>
-                <img class="profil-img col-lg-offset-2 col-lg-4"atl="fk_image" src="http://icon-icons.com/icons2/877/PNG/128/male-profile-picture_icon-icons.com_68388.png">
+                <img class="profil-img col-lg-offset-2 col-lg-4"atl="fk_image" src="{{ asset('image/avatar.png') }}"/>
             </div>
-            <div class="col-lg-12 ">
+            <div class="col-lg-12 cdbprojet">
                 <h4>Projects:</h4>
                 <div class="col-lg-12 projet">
                     <div>
@@ -100,7 +104,6 @@
                 </div>
                 <button class="col-lg-offset-11">new</button>
             </div>
-
         </section>
     </div>
 {% endblock %}
