--- a/app/Resources/views/site/contact.html.twig
+++ b/app/Resources/views/site/contact.html.twig
@@ -1,32 +1,31 @@
 {% extends ':site:home.html.twig' %}
 {% block nav %}{% endblock %}
 {% block body %}
-    <section {#class="container-fluid"#}>
-        <div {#class="row"#}>
-            <h3 class="text-center">Contact</h3>
-            <div class="">
+    <section class="contact">
+            <div>
                 <h3 class="text-center">Contact</h3>
-                {{form_start(formMail,{'attr':{'action':path('envoieMail')}})}}
-                <input type="text" placeholder="Mail" class="col-lg-8">
+                {{form_start(formMail)}}
+{#                ,{'attr':{'action':path('envoieMail')}}#}
+                <input type="text" placeholder="Mail" class="col-lg-6">
                 {{form_widget(formMail.author, {'attr':{'class':'hide'}})}}
                 {{form_widget(formMail.receiver, {'attr':{'class':'hide'}})}}
                 {{form_widget(formMail.subject, {'attr':{'class':'hide'}})}}
-                <select>
+                <select class="col-lg-offset-4 col-lg-1">
                     {% for sujet in sujets%}
                         <option>{{sujet.name}}</option>
                     {% endfor %}
                 </select>
+                <div class="col-lg-12">
                 {{form_widget(formMail.post, {'attr':{'placeholder':'message'}})}}
                 {{form_widget(formMail.seen, {'attr':{'class':'hide'}})}}
                 {{form_widget(formMail.datetime, {'attr':{'class':'hide'}})}}
-
+                </div>
                 <input type="submit" value="Envoyer" class="col-lg-8 col-lg-offset-2">
                 {{form_end(formMail)}}
-                <section>
-                    <a class="col-lg-offset-5" href="{{path('home')}}"><button type="button" class="btn btn-default">Annuler</button></a>
-                </section>
+                <div>
+                    <a class="col-lg-offset-11" href="{{path('home')}}"><button type="button" class="btn btn-default">Annuler</button></a>
+                </div>
             </div>
-        </div>
     </section>
 {% endblock %}
 {% block activités %}{% endblock %}
