--- a/app/Resources/views/site/home.html.twig
+++ b/app/Resources/views/site/home.html.twig
@@ -11,9 +11,6 @@
     </head>
     <body>
         <header> 
-            {% if is_granted("ROLE_MEMBRES")%}
-                <a href="{{path('carnetdebord')}}">{{app.user.pseudo}}</a>
-            {% endif %}
             <div class="text-center">
                 <img src="{{ asset('image/logo.png') }}"/>
             </div>
@@ -44,47 +41,52 @@
                             <p>{{presentation.description}}</p>
                         {% endfor %}
                     </div>
-                    <div class="col-lg-8 text-center nous">
-                        <a class="contacter" href="{{path('contact')}}">Contactez nous</a>
-                    </div>
+
                 </section>
             {% endblock %}
-            {% block activités %}
-                <section class="evenements container">
-                    <div>
-                        <div class="col-lg-offset-9 col-lg-3 ">
-                            {% if is_granted("ROLE_MEMBRES")%}
-                                <a class="col-lg-offset-10" href="{{path('loginOut')}}">logout</a>
-                            {% else %}
-                                <a class="col-lg-offset-10" href="{{path('login')}}">login</a>
-                            {% endif %}
-                            <h2 class="text-center ">Activités</h2>
-                            {% if is_granted("ROLE_MEMBRES")%}
-                                <ul class="trio">
-                                    <li id="projet">Mes projets</li>
-                                    <li id="message">Mes messages</li>
-                                    <li id="profil">Mon profil</li>
-                                </ul>
-                            {% endif %}
-                            {% for activity in activities %}
-                                <div class="postit">
-                                    <p>{{activity.datetime|date('d/m/Y')}}</p>
-                                    <h4 class="text-center">{{activity.title}}</h4>
-                                    <p class="text-justify">{{activity.description}}</p>
-                                    <a class="col-lg-offset-9 col-lg-3" href='{{path('forum',{'id':activity.id })}}'>détails</a>
-                                </div>
-                            {% endfor %} 
-                            <a class="col-lg-offset-6 text-center" href="" >&Congruent;</a>
-                        </div>
+            {% if is_granted("ROLE_MEMBRES")%}
+            {% block contactez_nous %}{% endblock %}
+        {% else %}
+            <div class="col-lg-8 text-center nous">
+                <a href="{{path('contact')}}">Contactez nous</a>
+            </div>
+        {% endif %}
+        {% block activités %}
+            <section class="evenements container">
+                <div>
+                    <div class="col-lg-offset-9 col-lg-3 ">
+                        {% if is_granted("ROLE_MEMBRES")%}
+                            <a class="col-lg-offset-10" href="{{path('loginOut')}}">logout</a>
+                        {% else %}
+                            <a class="col-lg-offset-10" href="{{path('login')}}">login</a>
+                        {% endif %}
+                        <h2 class="text-center ">Activités</h2>
+                        {% if is_granted("ROLE_MEMBRES")%}
+                            <ul class="trio">
+                                <li id="projet">Mes projets</li>
+                                <li id="message">Mes messages</li>
+                                <li id="profil">Mon profil</li>
+                            </ul>
+                        {% endif %}
+                        {% for activity in activities %}
+                            <div class="postit">
+                                <p>{{activity.datetime|date('d/m/Y')}}</p>
+                                <h4 class="text-center">{{activity.title}}</h4>
+                                <p class="text-justify">{{activity.description}}</p>
+                                <a class="col-lg-offset-9 col-lg-3" href='{{path('forum',{'id':activity.id })}}'>détails</a>
+                            </div>
+                        {% endfor %} 
+                        <a class="col-lg-offset-6 text-center" href="http://fabrique-beweb.com/"/><img class="text-center" src="{{asset('image/Barrow.png')}}"/></a>
                     </div>
-                </section>
-            {% endblock %}
-        </div>
-        <footer class="text-center">
-            <p>&COPY;Copyright by <a href="http://fabrique-beweb.com/"/> BeWeb.</p>
-        </footer>
-        <script src="{{asset('scripts/jQuery.js')}}"></script>
-        <script src="{{asset('../vendor/twbs/bootstrap/dist/js/bootstrap.js')}}"></script>
-        <script src="{{asset('scripts/main.js')}}"></script>
-    </body>
+                </div>
+            </section>
+        {% endblock %}
+    </div>
+    <footer class="text-center">
+        <p>&COPY;Copyright by <a href="http://fabrique-beweb.com/"/> BeWeb.</p>
+    </footer>
+    <script src="{{asset('scripts/jQuery.js')}}"></script>
+    <script src="{{asset('../vendor/twbs/bootstrap/dist/js/bootstrap.js')}}"></script>
+    <script src="{{asset('scripts/main.js')}}"></script>
+</body>
 </html>
