--- a/web/SASS/_activités.scss
+++ b/web/SASS/_activités.scss
@@ -1,6 +1,7 @@
 .evenements div div div {
     padding: 0.8em;
-    padding-bottom: 2em;
+    padding-top: 0.4em;
+    padding-bottom: 1.6em;
     margin-left: -0.5em;
     margin-right: -0.5em;
     background-color: $thirdColor;
@@ -9,14 +10,11 @@
 .evenements div div {
     margin-top: 1em;
     margin-right: -15px;
-    /*border : 1.5px solid black;*/ 
     background-color: lightblue;
     box-shadow: 1px 2px 10px;
 }
 h2 {
-    font-size: 2vw;
     margin: 1em;
-    /*margin-top: 1em;*/
 }
 h3 {
     font-size: 2em;
@@ -58,15 +56,17 @@ h3 {
     z-index: -1;
 }
 
-.trio li{
+.trio li{   
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background-color: darkslategrey;
     color: white;
     list-style-type: none;
-    /*border: solid #000 1px;*/ 
     margin: 4px;
     padding: 2px;
     padding-right: 40px;
     margin-left: 20px;
     padding-left: 8px;
     cursor: pointer;
+
 }
+
