--- a/web/SASS/_carnet.scss
+++ b/web/SASS/_carnet.scss
@@ -1,12 +1,13 @@
 .bell{
-    border: 1px solid darkslategray;
     background-color: darkslategray;
     border-radius: 50%;
     height:50px;
     width:50px;
     text-align: center;
-    margin-top:-4.5em;
-    margin-left: -4.5em;
+    position: absolute;
+    top: -1.7em;
+    left:  -1.7em;
+    box-shadow: 1px 2px 10px;
 }
 
 .bells{
@@ -15,17 +16,12 @@
 
 .a{
     margin-left: 10px;
-
-
 }
 
 .carnet{
     position: absolute;
     buttom: -1em;
-    
 }
-
-
 
 .profil p{
     border: 1px solid black;
@@ -35,13 +31,12 @@
 }
 
 .profil-img{
-    border: 1px solid black;
-    background-color: white;
+    border: 1px solid white;
+    background-color: darkslategray;
 }
 
 .projet{ 
     height: 10em;
-/*    width: 10em;*/
     overflow-y: scroll;
 }
 
@@ -52,4 +47,37 @@
 
 .pro div button{
     margin-bottom: 100px;
+}
+
+.cdbprojet{
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+}
+.h2{
+    padding-top: -20px;
+}
+
+.last{
+    background-color: $thirdColor;
+    box-shadow: 1px 2px 10px;
+    padding: 1px;
+    padding-bottom: 34px;
+    margin: 15px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.messages{
+    background-color: $thirdColor;
+    box-shadow: 1px 2px 10px;
+    padding: 30px;
+    padding-top: 5px;
+    padding-bottom: 30px;
+    margin: 15px;
+    margin-top: 20px;
+}
+.messages h4{
+    text-align: center;
+}
+.messages button{
+    text-align: right;
 }
