--- a/web/SASS/_home.scss
+++ b/web/SASS/_home.scss
@@ -1,8 +1,8 @@
 .section{
     border: $border;
     background-color: $secondColor;
-    padding: 0.8em;
     padding: 3em;
+    padding-top: 0.1em;
     margin-top:1em;   
     box-shadow: 1px 2px 10px;
 }
@@ -11,20 +11,30 @@ body{
 
     background-color: $firstColor  ;
 }
-
+.nous{
+    margin: 25px 0;
+    margin-bottom: 60px;
+}
 .nous a {
     color: black;
     text-shadow: 0px 0px 20px white;
-    font-size: 17px;
+    font-size: 20px;  
+
 }
-/*.contacter{
-    position: absolute;
-    margin-top: 100px;
-    padding-left: -55px;
-}*/
 
 header a {
     color:black;
     font-size: 20px;
     margin: 125px;
+}
+.contact{
+    background-color: $secondColor;
+    padding: 1px;
+    padding-bottom: 20px;
+    padding-left: 75px;
+    padding-right: 75px;
+    margin: 50px;
+    margin-right: 220px;
+    margin-left: 220px;
+    box-shadow: 1px 2px 10px;
 }
