--- a/app/Resources/views/membres/addPost.html.twig
+++ b/app/Resources/views/membres/addPost.html.twig
@@ -2,10 +2,10 @@
 {% block body %}
     <section>
         <div class="col-lg-8 col-lg-offset-2 section">
-            <h2 class="text-center">Inscription</h2>
+            <h2 class="text-center">Création projet</h2>
             {{form_start(formPost,{'attr':{'action':path('postVaild')}})}}
-            <input type="submit" value="Creer"class="col-lg-8 col-lg-offset-2">
             {{form_end(formPost)}}
+            <input type="submit" value="Créer"class="col-lg-offset-10 col-lg-2">
         </div>
     </section>
 {% endblock %}
