--- a/app/Resources/views/membres/carnetDeBord.html.twig
+++ b/app/Resources/views/membres/carnetDeBord.html.twig
@@ -19,81 +19,87 @@
         </section>
         <section id="message">
             {% for mail in mails %}
-            <div class="messages">
-                <h3>From: {{mail.author}}</h3>
+                <div class="messages">
+                    <h3>From: {{mail.author}}</h3>
                     <h4>object: {{mail.subject}}</h4>
-{#                    {% if mail.seen is checked%}#}
-                        <p>R (R = non lu)</p>
-{#                    {% endif %}#}
+                    {#                    {% if mail.seen is checked%}#}
+                    <p>R (R = non lu)</p>
+                    {#                    {% endif %}#}
                     <p>{{mail.subject}}</p>
                     <a href="{{path('forum',{'id':mail.id })}}"><button class="col-lg-offset-10">Repondre</button></a>
                 </div>
-{% endfor %}
+            {% endfor %}
         </section>
         <section id="profil">
             <div>
                 <h4>Profil:</h4>
                 <div class="col-lg-6 profil">
-                    <p>nom</p>
-                    <p>prenom</p>
-                    <p>pseudo</p>
-                    <a href="">changer le mot de passe</a>
-                    <p>adresse</p>
-                    <p>ville</p>
-                    <a href="">site web</a>
-                    <button>edit</button>
-                    <button>Update</button>
+                    <input class="col-lg-9"placeholder="Nom"/>
+                    <input class="col-lg-9"placeholder="Prenom"/>
+                    <input class="col-lg-9"placeholder="Pseudo"/>
+                    <a class="col-lg-9" href="">changer le mot de passe</a>
+                    <input class="col-lg-12"placeholder="Adresse"/>
+                    <input class="col-lg-9"placeholder="Ville"/>
+                    <input class="col-lg-9"placeholder="Code Postal"/>
+                    <div class="ijk col-lg-9">
+                        <a href="">URL site</a>
+                        <input class="droite" type="submit" value="edit"/>
+                    </div>
                 </div>
-                <img class="profil-img col-lg-offset-2 col-lg-4"atl="fk_image" src="{{ asset('image/avatar.png') }}"/>
+                <img class="profil-img col-lg-4"atl="fk_image" src="{{ asset('image/avatar.png') }}"/>
+                <input class="col-lg-offset-10 col-lg-2" type="submit" value="Actualiser"/>
             </div>
             <div class="col-lg-12 cdbprojet">
-                <h4>Projects:</h4>
+                <h4>Projets:</h4>
                 <div class="col-lg-12 projet">
                     <div>
                         <p class="col-lg-6" >bla bla bla bla bla</p>
                         <a class="col-lg-offset-1 col-lg-1">edit</a> 
-                        <a class="col-lg-offset-1 col-lg-1">quit</a>
+                        <a class="col-lg-offset-1 col-lg-1">quitte</a>
                         <p class="col-lg-offset-1 col-lg-1">boss</p>
                     </div>
                     <div>
                         <p class="col-lg-6" >bla bla bla bla bla</p>
                         <a class="col-lg-offset-1 col-lg-1">edit</a> 
-                        <a class="col-lg-offset-1 col-lg-1">quit</a>
+                        <a class="col-lg-offset-1 col-lg-1">quitte</a>
                         <p class="col-lg-offset-1 col-lg-1">boss</p>
                     </div>
                     <div>
                         <p class="col-lg-6" >bla bla bla bla bla</p>
                         <a class="col-lg-offset-1 col-lg-1">edit</a> 
-                        <a class="col-lg-offset-1 col-lg-1">quit</a>
+                        <a class="col-lg-offset-1 col-lg-1">quitte</a>
                         <p class="col-lg-offset-1 col-lg-1">boss</p>
                     </div>
                     <div>
                         <p class="col-lg-6" >bla bla bla bla bla</p>
                         <a class="col-lg-offset-1 col-lg-1">edit</a> 
-                        <a class="col-lg-offset-1 col-lg-1">quit</a>
+                        <a class="col-lg-offset-1 col-lg-1">quitte</a>
                         <p class="col-lg-offset-1 col-lg-1">boss</p>
                     </div>
                     <div>
                         <p class="col-lg-6" >bla bla bla bla bla</p>
                         <a class="col-lg-offset-1 col-lg-1">edit</a> 
-                        <a class="col-lg-offset-1 col-lg-1">quit</a>
+                        <a class="col-lg-offset-1 col-lg-1">quitte</a>
                         <p class="col-lg-offset-1 col-lg-1">boss</p>
                     </div>
                     <div>
                         <p class="col-lg-6" >bla bla bla bla bla</p>
                         <a class="col-lg-offset-1 col-lg-1">edit</a> 
-                        <a class="col-lg-offset-1 col-lg-1">quit</a>
+                        <a class="col-lg-offset-1 col-lg-1">quitte</a>
                         <p class="col-lg-offset-1 col-lg-1">boss</p>
                     </div>
                     <div>
                         <p class="col-lg-6" >bla bla bla bla bla</p>
                         <a class="col-lg-offset-1 col-lg-1">edit</a> 
-                        <a class="col-lg-offset-1 col-lg-1">quit</a>
+                        <a class="col-lg-offset-1 col-lg-1">quitte</a>
                         <p class="col-lg-offset-1 col-lg-1">boss</p>
                     </div>
                 </div>
-                <button class="col-lg-offset-11">new</button>
+                <div>
+                    <button class="xyz col-lg-offset-11">Nouveau</button>
+                </div>
             </div>
+
         </section>
     </div>
 {% endblock %}
