--- a/app/Resources/views/site/membres.html.twig
+++ b/app/Resources/views/site/membres.html.twig
@@ -4,15 +4,16 @@
     <section>
         <div class="col-lg-8 section">
             <h2 class="text-center">Membres</h2>
-            <div>
+            <div class="mems">
                 {% for membre  in membres %}
                     <img class="{% if loop.index is divisible by(2) %}pull-right{% else %}pull-left{% endif %}" src="{{ asset('image/avatar1.png') }}"/>
-                    <div class="container-fluid">
+                    <div class="mem container-fluid">
                         <p>{{ membre.pseudo }}</p>
                         <p>{{ membre.mail }}</p>
                         <p>{{ membre.url }}</p>
                     </div>
                 {% endfor %}
             </div>
+        </div>
     </section>
 {% endblock %}
