--- a/app/Resources/views/site/projets.html.twig
+++ b/app/Resources/views/site/projets.html.twig
@@ -5,8 +5,8 @@
         <div class="col-lg-8 , section">
             <h2 class="text-center">Projets</h2>
             <section>
-                <p>Name, author,...</p>
-                <p>Find</p>
+                <input class="col-lg-9" placeholder="Nom, auteur..."/>
+                <input class="col-lg-offset-1 col-lg-2" type="submit" value="Recherche">
             </section>
             <section>
                 <section>
