--- a/web/SASS/_activités.scss
+++ b/web/SASS/_activités.scss
@@ -2,6 +2,8 @@
     padding: 0.8em;
     padding-top: 0.4em;
     padding-bottom: 1.6em;
+    margin-bottom: 3px;
+    margin-top: 3px;
     margin-left: -0.5em;
     margin-right: -0.5em;
     background-color: $thirdColor;
@@ -63,4 +65,9 @@ h3 {
     padding-left: 8px;
     cursor: pointer;
 }
-
+.details{
+    background-color: $thirdColor;
+    box-shadow: 1px 2px 10px;
+    padding-bottom: 25px;
+    margin-top: 40px;
+}
