--- a/web/SASS/_carnet.scss
+++ b/web/SASS/_carnet.scss
@@ -28,6 +28,8 @@
 .profil-img{
     border: 1px solid white;
     background-color: darkslategray;
+    margin-left: 100px;
+    padding: 10px;
 }
 .projet{ 
     height: 10em;
@@ -43,12 +45,13 @@
 .cdbprojet{
     border-bottom: 1px solid black;
     border-top: 1px solid black;
+    margin-top: 10px;
 }
 .h2{
     padding-top: -20px;
 }
 .last{
-    background-color: $thirdColor;
+    background-color: #ECF0F1;
     box-shadow: 1px 2px 10px;
     padding: 1px;
     padding-bottom: 34px;
@@ -70,4 +73,16 @@
 }
 .messages button{
     text-align: right;
+    margin-left: 515px;
+}
+.ijk{
+    width: 100%;
+}
+.droite{
+    margin-left: 122px;
+}
+.xyz{
+    margin-top: 10px;
+    margin-bottom: 17px;
+    margin-left: 591px;
 }
