--- a/web/SASS/_home.scss
+++ b/web/SASS/_home.scss
@@ -5,12 +5,13 @@
     padding-top: 0.1em;
     margin-top:1em;   
     box-shadow: 1px 2px 10px;
+    margin-bottom: 75px;
 }
 body{
     background-color: $firstColor  ;
 }
 .nous{
-    margin: 25px 0;
+/*    margin: 25px 0;*/
     margin-bottom: 60px;
 }
 .nous a {
@@ -33,4 +34,7 @@ header a {
     margin-right: 220px;
     margin-left: 220px;
     box-shadow: 1px 2px 10px;
+}
+.theme{
+        padding: 55px;
 }
