fix password field when sign up

--- a/app/Resources/views/membres/addPost.html.twig
+++ b/app/Resources/views/membres/addPost.html.twig
@@ -3,7 +3,7 @@
     <section>
         <div class="col-lg-8 col-lg-offset-2 section">
             <h2 class="text-center">Création projet</h2>
-            {{form_start(formPost,{'attr':{'action':path('postVaild')}})}}
+            {{form_start(formPost,{'attr':{'action':path('postValid')}})}}
             <input type="submit" value="Créer"class="col-lg-offset-10 col-lg-2">
             {{form_end(formPost)}}
         </div>
