fix password field when sign up

--- a/app/Resources/views/membres/addUser.html.twig
+++ b/app/Resources/views/membres/addUser.html.twig
@@ -7,7 +7,7 @@
             {{form_widget(formUser.name,{'attr':{'placeholder':'Nom', 'class':'col-lg-8 col-lg-offset-2'}})}}
             {{form_widget(formUser.firstName,{'attr':{'placeholder':'Prénom', 'class':'col-lg-8 col-lg-offset-2'}})}}
             {{form_widget(formUser.pseudo,{'attr':{'placeholder':'Pseudo', 'class':'col-lg-8 col-lg-offset-2'}})}}
-            {{form_widget(formUser.passWord,{'type': 'password','attr':{'placeholder':'Mot de passe', 'class':'col-lg-8 col-lg-offset-2'}})}}
+            {{form_widget(formUser.passWord,{'attr':{'placeholder':'Mot de passe', 'class':'col-lg-8 col-lg-offset-2'}})}}
             {{form_widget(formUser.address,{'attr':{'placeholder':'Adresse', 'class':'col-lg-8 col-lg-offset-2'}})}}
             {{form_widget(formUser.city,{'attr':{'placeholder':'Ville', 'class':'col-lg-8 col-lg-offset-2'}})}}
             {{form_widget(formUser.postalCode,{'attr':{'placeholder':'Code Postal', 'class':'col-lg-8 col-lg-offset-2'}})}}
