destruction de la recursivité

--- a/app/Resources/views/site/home.html.twig
+++ b/app/Resources/views/site/home.html.twig
@@ -45,7 +45,7 @@
             {% block contactez_nous %}{% endblock %}
         {% else %}
             <div class="col-lg-8 text-center nous">
-                <a class="hide" href="{{path('contact')}}">Contactez nous</a>
+                <a  href="{{path('contact')}}">Contactez nous</a>
             </div>
         {% endif %}
         {% block activités %}
