--- a/app/Resources/views/site/login.html.twig
+++ b/app/Resources/views/site/login.html.twig
@@ -8,9 +8,18 @@
                 <input type="text" placeholder="Pseudo" name="_username" class="col-lg-6 col-lg-offset-3">
                 <input type="password" placeholder="Mot de pass" name="_password" class="col-lg-6 col-lg-offset-3">
                 <label class="col-lg-offset-3"><input type="checkbox">Se souvenir de moi</label>
-                <input type="submit" value="Login" class="col-lg-3 col-lg-offset-6">
+                <div class="container">
+                    <div class="row">
+                   
+                        <input type="submit" value="Login" class="col-lg-1 col-lg-offset-1">
             </form>
-            <a class="col-lg-3 col-lg-offset-6 text-right" href="{{path('home')}}">Annuler</a>
+                  <form action="register">
+                <input type="submit" value="s'inscrire" class="col-lg-1 col-lg-offset-1">
+            </form> 
+                </div>
+                </div>
+
+            <a class="col-lg-1 col-lg-offset-8 text-right" href="{{path('home')}}">Annuler</a>
         </div>
     </section>
 {% endblock %}
